<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/helpitem"
        android:title="@string/nav_help"
        android:icon="@drawable/help"/>  <!-- This uses showAsAction=always, so look at icon= parameter -->


    <item android:id="@+id/search_item"
        android:icon="@drawable/search"
        android:title="@string/nav_search"
        />    <!-- This uses showAsAction=always, so look at icon= parameter        app:actionViewClass="android.widget.SearchView"
 -->

    <item android:id="@+id/language"
        android:icon="@drawable/language"
        android:title="@string/French"/>  <!-- This uses showAsAction=never, so look at title= parameter -->

    <item android:id="@+id/savdEvents"
        android:icon="@drawable/heartt"
        android:title="@string/nav_savedEvents"/>
</menu>