<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginRight="10dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"

        android:visibility="visible"
        android:id="@+id/fragmentLocation">

        <ImageView
            android:id="@+id/event_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp">
                <TextView
                    android:id="@+id/event_detail_title"
                    android:text="@string/event_detail_title"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/event_detail_title_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp">

                <TextView
                    android:id="@+id/event_detail_date"
                    android:text="@string/event_detail_date"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    />

                <TextView
                    android:id="@+id/event_detail_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp">
                <TextView
                    android:id="@+id/event_detail_price"
                    android:text="@string/event_detail_price"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/event_detail_price_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/event_import_layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp">
                <TextView
                    android:id="@+id/event_detail_url"
                    android:text="@string/event_detail_url"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/event_detail_url_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/event_import_layout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp">
        <Button
            android:id="@+id/save"
            android:text="@string/btn_save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:textSize="12dp"
            android:textStyle="bold"
            />
    </LinearLayout>


</LinearLayout>
